--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,8 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto  (2,794,356)</li>
+    <li>Hamilton  (1)</li>
+
   </ol>
 
 </body>
